[gd_scene load_steps=5 format=3 uid="uid://drsph3xdsbg4"]

[ext_resource type="Script" path="res://Scripts/Game/game.gd" id="1_nkw48"]
[ext_resource type="PackedScene" uid="uid://b2d7xcbqo4frd" path="res://Scenes/Game/player.tscn" id="1_ttd3s"]
[ext_resource type="Material" uid="uid://ci8fr3n7t2pef" path="res://Shaders/CRT_Edited.tres" id="2_fayp4"]
[ext_resource type="Script" path="res://Scripts/Game/spawner.gd" id="3_4168k"]

[node name="Game" type="Node2D"]
script = ExtResource("1_nkw48")

[node name="Player" parent="." instance=ExtResource("1_ttd3s")]
position = Vector2(640, 360)
scale = Vector2(0.5, 0.5)

[node name="Lasers" type="Node" parent="."]

[node name="Enemies" type="Node" parent="."]
script = ExtResource("3_4168k")

[node name="ColorRect_Shader" type="ColorRect" parent="."]
z_index = 500
material = ExtResource("2_fayp4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="EnemySpawnTimer" type="Timer" parent="."]

[connection signal="player_laser_shot" from="Player" to="." method="_on_player_laser_shot"]
[connection signal="enemySpawned" from="Enemies" to="." method="_on_enemy_spawned"]
[connection signal="timeout" from="EnemySpawnTimer" to="Enemies" method="_on_enemy_spawn_timer_timeout"]
